# infs803_group7_backend

./: Cargo.toml  MOCK_DATA (1).json  MOCK_DATA (2).json  MOCK_DATA copy.json  MOCK_DATA.json  dockerfile  imdb_movies copy.json  imdb_movies.json  readme.md
.github/workflows/: azure-static-web-apps-polite-hill-0009b2000.yml  rustwebapp-AutoDeployTrigger-e66adab9-7768-422a-9861-35cf7704baa0.yml
src/: MOCK_DATA.json  example.json  favorite.rs  jwt.rs  login.rs  main.rs  movie.rs  user.rs
