[package]
name = "infs803_group7_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = {version = "0.4.35", features = ["serde"]}
firebase-rs = "2.1.0"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = {version = "1.36.0", features = ["full"]}
tower-http = { version = "0.5.2", features = ["full"] }
jsonwebtoken = "9.3.0"